Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL)
-
None
Description
High NTFS fragmentation, and IO error was reported by on stackexchange
https://dba.stackexchange.com/questions/186895/ntfs-filesystem-fragmentation-issue-occur-after-migrating-mysql-5-6-database-to
This is for 10.2. There are 2 things that have changed as compared with to previous version
- all files are made sparse "when opening", this was ported from Innodb 5.7
- when tablespace is extended, we do not write binary zeros anymore to the file, but instead
SetFileInformationByHandle with FileEndOfFileInfo
Together, those changes might create a "hole" at the end of file, even if compression is not on. Also some investigation should be done on whether to write binary zeroes is necessary, and on how exactly to grow file. There are several options - write zeroes, SetEndOfFile, SetFileInformationByHandle(), DeviceIoControl(FSCTL_SET_ZERO_RANGE) . Some details can be found in https://stackoverflow.com/questions/46458151/setendoffile-vs-setfileinformationbyhandle-to-extend-file)
Attachments
Issue Links
- relates to
-
MDEV-13612 Startup takes longer than 5 - 50 minutes after update from MariaDB 5.5.x to 10.2.6
-
- Closed
-
-
MDEV-14554 MariaDB server 10.2.10 doesn't repond on some requests
-
- Closed
-
-
MDEV-11520 Extending an InnoDB data file unnecessarily allocates a large memory buffer on Windows
-
- Closed
-
-
MDEV-14244 MariaDB 10.2.10 fails to run on Debian Stretch with ext3 and O_DIRECT
-
- Closed
-
https://github.com/MariaDB/server/commit/96b9c617870edf6cdbac1e7ed1cd56a33bf39656